// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Do payment with Excel FSP Error cases Should throw an error if no transactions are found for the payment related to an excel FSP 1`] = `
{
  "message": "No transactions found for this payment with FSPs that require to download payment instructions.",
  "statusCode": 404,
}
`;

exports[`Do payment with Excel FSP Error cases Should throw an error if program does not have Excel FSP configured 1`] = `
{
  "message": "No program FSP configuration with Excel FSP found for this program",
  "statusCode": 404,
}
`;

exports[`Do payment with Excel FSP Error cases Sould throw an error if the payment doesn't exist 1`] = `
{
  "message": "Payment with ID 9999 not found in program 2",
  "statusCode": 404,
}
`;

exports[`Do payment with Excel FSP Export FSP instructions successfully Should return all program-registration-attributes on Get FSP instruction with Excel-FSP when "columnsToExport" is not set 1`] = `
[
  {
    "data": [
      {
        "accountId": null,
        "amount": 10,
        "date": null,
        "dob": "31-08-1990",
        "dragon": "0",
        "fixedChoice": null,
        "fullName": "Jaime Lannister",
        "healthArea": "",
        "house": "lannister",
        "knowsNothing": "false",
        "motto": "A lanister always pays his debts",
        "openAnswer": "",
        "personalId": "",
        "phoneNumber": "14155235556",
        "referenceId": "westeros987654322",
        "whatsappPhoneNumber": "14155235555",
      },
    ],
    "fileNamePrefix": "gringotts",
  },
  {
    "data": [
      {
        "accountId": null,
        "amount": 20,
        "date": null,
        "dob": "31-08-1990",
        "dragon": "1",
        "fixedChoice": null,
        "fullName": "John Snow",
        "healthArea": "",
        "house": "stark",
        "knowsNothing": "true",
        "motto": "Winter is coming",
        "openAnswer": "",
        "personalId": "",
        "phoneNumber": "14155235554",
        "referenceId": "westeros123456789",
        "whatsappPhoneNumber": "14155235554",
      },
      {
        "accountId": null,
        "amount": 10,
        "date": null,
        "dob": "31-08-1990",
        "dragon": "0",
        "fixedChoice": null,
        "fullName": "Arya Stark",
        "healthArea": "",
        "house": "stark",
        "knowsNothing": "false",
        "motto": "A girl has no name",
        "openAnswer": "",
        "personalId": "",
        "phoneNumber": "14155235555",
        "referenceId": "westeros987654321",
        "whatsappPhoneNumber": "14155235555",
      },
    ],
    "fileNamePrefix": "ironBank",
  },
]
`;
